added continent visuals

--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Altair Chart</title>
+    <title>Coffee Production and Consumption</title>
+    <link rel="stylesheet" href="style.css">
     <!-- Load Altair via CDN -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
+<body>
+  <h1>Coffee Production and Consumption</h1>
+  <h3>Select from the following links to see breakdown per country.</h3>
+  <h4><a href="Visualization/africa.html">Africa</a></h4>
+  <h4><a href="Visualization/asia.html">Asia</a></h4>
+  <h4><a href="Visualization/northAmerica.html">North America</a></h4>
+  <h4><a href="Visualization/oceania.html">Oceania</a></h4>
+  <h4><a href="Visualization/southAmerica.html">South America</a></h4>
+  <p>Hover over the icons to see info on each country.</p>
+</body>
 <body>
     <!-- Container for the chart -->
     <div id="chart-container"></div>
