--- a/Visualization/africa.html
+++ b/Visualization/africa.html
@@ -12,7 +12,18 @@
 </head>
 <body>
     <h1>Coffee Production and Consumption in Africa</h1>
-    <p>Hover over the icons to see info on each country.</p>
+    <h3>Select from the following links to see breakdown per continent.</h3>
+    <div class="topnav">
+      <div class="links-container">
+        <h4><a href="../index.html">Home</a></h4>
+        <h4><a href="africa.html">Africa</a></h4> 
+        <h4><a href="asia.html">Asia</a></h4> 
+        <h4><a href="northAmerica.html">North America</a></h4>
+        <h4><a href="oceania.html">Oceania</a></h4> 
+        <h4><a href="southAmerica.html">South America</a></h4>
+      </div>
+    </div>
+    <p>Hover over the flags to see info on each country.</p>
 </body>
 <body>
     <!-- Container for the chart -->
@@ -11702,8 +11713,7 @@
       }
     ]
   }
-}
-        
+}        
         // Embed Altair chart into the specified container
         vegaEmbed('#chart-container', chartSpec);
     </script>
