--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
 </head>
 <body>
   <h1>Coffee Production and Consumption</h1>
-  <h3>Select from the following links to see breakdown per country.</h3>
-  <h4><a href="Visualization/africa.html">Africa</a></h4>
-  <h4><a href="Visualization/asia.html">Asia</a></h4>
-  <h4><a href="Visualization/northAmerica.html">North America</a></h4>
-  <h4><a href="Visualization/oceania.html">Oceania</a></h4>
-  <h4><a href="Visualization/southAmerica.html">South America</a></h4>
-  <p>Hover over the icons to see info on each country.</p>
+  <h3>Select from the following links to see breakdown per continent.</h3>
+  <div class="topnav">
+    <div class="links-container">
+      <h4><a href="index.html">Home</a></h4> 
+      <h4><a href="Visualization/africa.html">Africa</a></h4> 
+      <h4><a href="Visualization/asia.html">Asia</a></h4> 
+      <h4><a href="Visualization/northAmerica.html">North America</a></h4>
+      <h4><a href="Visualization/oceania.html">Oceania</a></h4> 
+      <h4><a href="Visualization/southAmerica.html">South America</a></h4>
+    </div>
+  </div>
+  <p>Hover over the dots to see info on each country.</p>
 </body>
 <body>
     <!-- Container for the chart -->
