--- a/alyssa.html
+++ b/alyssa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Altair Chart</title>
+    <title>Coffee Likeability and Harvest</title>
     <link rel="stylesheet" href="style.css">
     <!-- Load Altair via CDN -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
