--- a/alyssasVisualizations/taste.html
+++ b/alyssasVisualizations/taste.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Altair Chart</title>
+    <title>Taste</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Load Altair via CDN -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-    <h1>Taste</h1>
+    <h1>Coffee Likeability Metrics</h1>
     <h3>Alyssa Nicholas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         Nora Povejsil&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         Daniel Bostwick</h3>
