Updated Alyssas pages

--- a/alyssasVisualizations/harvestedBags.html
+++ b/alyssasVisualizations/harvestedBags.html
@@ -8,15 +8,12 @@
 </head>
 <body>
     <h1>Harvested Bags of Coffee</h1>
-    <h3>Select from the following links to see breakdown per continent.</h3>
+    <h3>Select from the following links to see breakdown.</h3>
     <div class="topnav">
       <div class="links-container">
         <h4><a href="../alyssa.html">Main</a></h4> 
+        <h4><a href="harvestedBags.html">Harvested Bags</a></h4>
         <h4><a href="taste.html">Taste</a></h4> 
-        <!-- <h4><a href="Visualization/asia.html">Asia</a></h4> 
-        <h4><a href="Visualization/northAmerica.html">North America</a></h4>
-        <h4><a href="Visualization/oceania.html">Oceania</a></h4> 
-        <h4><a href="Visualization/southAmerica.html">South America</a></h4>  -->
       </div>
     </div>
     <p>Hover over the dots to see info on each country.</p>
@@ -66,3 +63,4 @@
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
     vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 </script>
+</html>
