--- a/alyssasVisualizations/taste.html
+++ b/alyssasVisualizations/taste.html
@@ -12,14 +12,12 @@
 </head>
 <body>
     <h1>Coffee Likeability Metrics</h1>
-    <h3>Alyssa Nicholas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Nora Povejsil&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Daniel Bostwick</h3>
+    <h3>Select from the following links to see breakdown.</h3>
     <div class="topnav">
       <div class="links-container">
         <h4><a href="../alyssa.html">Main</a></h4> 
         <h4><a href="harvestedBags.html">Harvested Bags</a></h4> 
-        <!-- <h4><a href="alyssa.html">Alyssa</a></h4>  -->
+        <h4><a href="taste.html">Taste</a></h4> 
       </div>
     </div>
     <p>Hover over the dots to see info on each country.</p>
@@ -72,3 +70,4 @@
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
     vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 </script>
+</html>
