--- a/alyssa.html
+++ b/alyssa.html
@@ -11,10 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-    <h1>Visualizing The Global Coffee Industry</h1>
-    <h3>Alyssa Nicholas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Nora Povejsil&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Daniel Bostwick</h3>
+    <h1>The Likeability and Harvest of Coffee Throughout the World</h1>
+    <h3>Select from the following links to see breakdown.</h3>
     <div class="topnav">
       <div class="links-container">
         <h4><a href="index.html">Home</a></h4> 
