--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 </head>
 <body>
     <h1>Visualizing The Global Coffee Industry</h1>
-    <h3>Alyssa Nicholas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Nora Povejsil&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        Daniel Bostwick</h3>
+    <style>
+        a {
+            color: black; 
+            text-decoration: none; 
+        }
+    </style>
+    <h3><a href="https://www.ischool.berkeley.edu/people/alyssa-nicholas">Alyssa Nicholas</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.ischool.berkeley.edu/people/nora-povejsil">Nora Povejsil</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.ischool.berkeley.edu/people/daniel-bostwick">Daniel Bostwick</a></h3>
     <div class="topnav">
       <div class="links-container">
-        <h4><a href="daniel.html">Daniel</a></h4> 
-        <h4><a href="nora.html">Nora</a></h4> 
         <h4><a href="alyssa.html">Alyssa</a></h4> 
+        <h4><a href="nora.html">Nora</a></h4> 
+        <h4><a href="daniel.html">Daniel</a></h4> 
       </div>
     </div>
     <p>Hover over the dots to see info on each country.</p>
