--- a/nora.html
+++ b/nora.html
@@ -3,59 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffee Production and Consumption</title>
+    <title>Coffee Business</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>An Overview of the Coffee Business Throughout the World</h1>
-    <h3>Select from the following links to see breakdown per continent.</h3>
+    <h1>An Overview of the Coffee Business</h1>
+    <h3>Select from the following links to see breakdown.</h3>
     <div class="topnav">
       <div class="links-container">
         <h4><a href="index.html">Home</a></h4> 
-        <!-- <h4><a href="Visualization/africa.html">Africa</a></h4> 
-        <h4><a href="Visualization/asia.html">Asia</a></h4> 
-        <h4><a href="Visualization/northAmerica.html">North America</a></h4>
-        <h4><a href="Visualization/oceania.html">Oceania</a></h4> 
-        <h4><a href="Visualization/southAmerica.html">South America</a></h4> -->
+        <h4><a href="norasVisualizations/consumption.html">Consumption</a></h4>
+        <h4><a href="norasVisualizations/production.html">Production</a></h4>  
+        <h4><a href="norasVisualizations/import-export.html">Import and Export</a></h4>
       </div>
     </div>
     <p>Hover over the dots to see info on each country.</p>
-  </body>
-<div class='tableauPlaceholder' 
-    id='viz1712464644134' 
-    style='position: relative'>
-    <noscript>
-        <a href='#'>
-            <img alt='Dashboard 1 ' 
-            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CoffeeDashboardReviewDraft2&#47;Dashboard1&#47;1_rss.png' 
-            style='border: none' />
-        </a>
-    </noscript>
-    <object class='tableauViz'  style='display:none;'>
-        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-        <param name='embed_code_version' value='3' /> 
-        <param name='site_root' value='' />
-        <param name='name' value='CoffeeDashboardReviewDraft2&#47;Dashboard1' />
-        <param name='tabs' value='no' />
-        <param name='toolbar' value='yes' />
-        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CoffeeDashboardReviewDraft2&#47;Dashboard1&#47;1.png' /> 
-        <param name='animate_transition' value='yes' />
-        <param name='display_static_image' value='yes' />
-        <param name='display_spinner' value='yes' />
-        <param name='display_overlay' value='yes' />
-        <param name='display_count' value='yes' />
-        <param name='language' value='en-US' />
-    </object>
-</div>                
-<script type='text/javascript'>                   
-    var divElement = document.getElementById('viz1712464644134');                    
-    var vizElement = divElement.getElementsByTagName('object')[0];                    
-    if ( divElement.offsetWidth > 800 ) { 
-        vizElement.style.width='1000px';vizElement.style.height='827px';} 
-    else if ( divElement.offsetWidth > 500 ) { 
-        vizElement.style.width='1000px';vizElement.style.height='827px';} 
-    else { vizElement.style.width='100%';vizElement.style.height='1877px';}                     
-    var scriptElement = document.createElement('script');                    
-    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
-    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-</script>
+</body>
+</html>
