Updated index and style, Added about, demo, and team

--- a/index.html
+++ b/index.html
@@ -10,26 +10,19 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
-<body>
-    <h1>Visualizing The Global Coffee Industry</h1>
-    <style>
-        a {
-            color: black; 
-            text-decoration: none; 
-        }
-    </style>
-    <h3><a href="https://www.ischool.berkeley.edu/people/alyssa-nicholas">Alyssa Nicholas</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://www.ischool.berkeley.edu/people/nora-povejsil">Nora Povejsil</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://www.ischool.berkeley.edu/people/daniel-bostwick">Daniel Bostwick</a></h3>
-    <div class="topnav">
-      <div class="links-container">
-        <h4><a href="alyssa.html">Alyssa</a></h4> 
-        <h4><a href="nora.html">Nora</a></h4> 
-        <h4><a href="daniel.html">Daniel</a></h4> 
-      </div>
+<div class="topnav">
+    <div class="links-container">
+      <h1><a href="index.html">Global Coffee</a></h1>
     </div>
-    <p>Hover over the dots to see info on each country.</p>
-  </body>
+    <div class="links-container">
+      <h3><a href="alyssa.html">Likeability</a></h3> 
+      <h3><a href="nora.html">Business</a></h3> 
+      <h3><a href="daniel.html">Culture</a></h3> 
+      <h3><a href="about.html">About</a></h3>
+      <h3><a href="team.html">Team</a></h3> 
+      <h3><a href="demo.html">Demo</a></h3>
+    </div>
+</div>
 <body>
     <!-- Container for the chart -->
     <div id="chart-container"></div>
