Updated Alyssas files

--- a/alyssa.html
+++ b/alyssa.html
@@ -11,14 +11,27 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-    <h1>The Likeability and Harvest of Coffee Throughout the World</h1>
-    <h3>Select from the following links to see breakdown.</h3>
     <div class="topnav">
-      <div class="links-container">
-        <h4><a href="index.html">Home</a></h4> 
-        <h4><a href="alyssasVisualizations/harvestedBags.html">Havested Bags</a></h4> 
-        <h4><a href="alyssasVisualizations/taste.html">Taste</a></h4> 
-      </div>
+        <div class="links-container">
+            <h1><a href="index.html">Global Coffee</a></h1>
+        </div>
+        <div class="links-container">
+            <h3><a href="alyssa.html">Main</a></h3> 
+            <h3><a href="alyssasVisualizations/harvestedBags.html">Harvested Bags</a></h3> 
+            <h3><a href="alyssasVisualizations/taste.html">Taste</a></h3> 
+        </div>
     </div>
-    <p>Hover over the dots to see info on each country.</p>
-  </body>
+    <h1>The Likeability and Harvest of Coffee Throughout the World</h1>
+    <body>
+        <style>
+            p {
+                max-width: 800px; /* Adjust the value as needed */
+                font-size: 20px;
+            }
+            </style>
+        <p>
+            Describe your overall theme of your visualizations here.
+        </p>
+    </body>
+</body>
+</html>
