--- a/alyssasVisualizations/harvestedBags.html
+++ b/alyssasVisualizations/harvestedBags.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Harvested Bags of Coffee</h1>
-    <h3>Select from the following links to see breakdown.</h3>
     <div class="topnav">
-      <div class="links-container">
-        <h4><a href="../alyssa.html">Main</a></h4> 
-        <h4><a href="harvestedBags.html">Harvested Bags</a></h4>
-        <h4><a href="taste.html">Taste</a></h4> 
-      </div>
+        <div class="links-container">
+            <h1><a href="../index.html">Global Coffee</a></h1>
+        </div>
+        <div class="links-container">
+            <h3><a href="../alyssa.html">Main</a></h3> 
+            <h3><a href="harvestedBags.html">Harvested Bags</a></h3>
+            <h3><a href="taste.html">Taste</a></h3> 
+        </div>
     </div>
-    <p>Hover over the dots to see info on each country.</p>
+    <h1>Harvested Bags of Coffee</h1>
   </body>
   <div class='tableauPlaceholder' 
     id='viz1712467679206' 
