--- a/alyssasVisualizations/taste.html
+++ b/alyssasVisualizations/taste.html
@@ -11,16 +11,17 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-    <h1>Coffee Likeability Metrics</h1>
-    <h3>Select from the following links to see breakdown.</h3>
     <div class="topnav">
-      <div class="links-container">
-        <h4><a href="../alyssa.html">Main</a></h4> 
-        <h4><a href="harvestedBags.html">Harvested Bags</a></h4> 
-        <h4><a href="taste.html">Taste</a></h4> 
-      </div>
+        <div class="links-container">
+            <h1><a href="../index.html">Global Coffee</a></h1>
+        </div>
+        <div class="links-container">
+            <h3><a href="../alyssa.html">Main</a></h3> 
+            <h3><a href="harvestedBags.html">Harvested Bags</a></h3> 
+            <h3><a href="taste.html">Taste</a></h3> 
+        </div>
     </div>
-    <p>Hover over the dots to see info on each country.</p>
+    <h1>Coffee Likeability Metrics</h1>
   </body>
   <div class='tableauContainer'>
     <div class='tableauPlaceholder' 
