Updated Noras files

--- a/nora.html
+++ b/nora.html
@@ -7,16 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>An Overview of the Coffee Business</h1>
-    <h3>Select from the following links to see breakdown.</h3>
     <div class="topnav">
       <div class="links-container">
-        <h4><a href="index.html">Home</a></h4> 
-        <h4><a href="norasVisualizations/consumption.html">Consumption</a></h4>
-        <h4><a href="norasVisualizations/production.html">Production</a></h4>  
-        <h4><a href="norasVisualizations/import-export.html">Import and Export</a></h4>
+        <h1><a href="index.html">Global Coffee</a></h1>
+      </div>
+      <div class="links-container">
+        <h3><a href="nora.html">Main</a></h3> 
+        <h3><a href="norasVisualizations/consumption.html">Consumption</a></h3>
+        <h3><a href="norasVisualizations/production.html">Production</a></h3>  
+        <h3><a href="norasVisualizations/import-export.html">Import and Export</a></h3>
       </div>
     </div>
-    <p>Hover over the dots to see info on each country.</p>
+    <h1>An Overview of the Coffee Business</h1>
+  </body>
+  <body>
+    <style>
+        p {
+            max-width: 800px; /* Adjust the value as needed */
+            font-size: 20px;
+        }
+        </style>
+    <p>
+        Describe your overall theme of your visualizations here.
+    </p>
 </body>
 </html>
