--- a/norasVisualizations/consumption.html
+++ b/norasVisualizations/consumption.html
@@ -7,42 +7,47 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Domestic Consumption By Country</h1>
-    <h3>Select from the following links to see breakdown per continent.</h3>
     <div class="topnav">
-      <div class="links-container">
-        <h4><a href="../nora.html">Main</a></h4> 
-        <h4><a href="consumption.html">Consumption</a></h4>
-        <h4><a href="production.html">Production</a></h4> 
-        <h4><a href="import-export.html">Import and Export</a></h4>
-      </div>
+        <div class="links-container">
+            <h1><a href="../index.html">Global Coffee</a></h1>
+        </div>
+        <div class="links-container">
+            <h3><a href="../nora.html">Main</a></h3> 
+            <h3><a href="consumption.html">Consumption</a></h3>
+            <h3><a href="production.html">Production</a></h3> 
+            <h3><a href="import-export.html">Import and Export</a></h3>
+        </div>
     </div>
-    <p>Hover over the dots to see info on each country.</p>
-  </body>
-  <div class='tableauPlaceholder' id='viz1712560787652' style='position: relative'>
-    <noscript>
-        <a href='#'>
-            <img alt='Dashboard 3 ' 
-                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DomesticConsumptionCoffeeDashboard&#47;Dashboard3&#47;1_rss.png' 
-                style='border: none' />
-        </a>
-    </noscript>
-    <object class='tableauViz'  style='display:none;'>
-        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-        <param name='embed_code_version' value='3' /> 
-        <param name='site_root' value='' />
-        <param name='name' value='DomesticConsumptionCoffeeDashboard&#47;Dashboard3' />
-        <param name='tabs' value='no' />
-        <param name='toolbar' value='yes' />
-        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DomesticConsumptionCoffeeDashboard&#47;Dashboard3&#47;1.png' /> 
-        <param name='animate_transition' value='yes' />
-        <param name='display_static_image' value='yes' />
-        <param name='display_spinner' value='yes' />
-        <param name='display_overlay' value='yes' />
-        <param name='display_count' value='yes' />
-        <param name='language' value='en-US' />
-    </object>
-</div>                
+    <h1>Domestic Consumption By Country</h1>
+</body>
+<div class="centered">
+<div class="image-container">
+    <div class='tableauPlaceholder' id='viz1712560787652' style='position: relative'>
+        <noscript>
+            <a href='#'>
+                <img alt='Dashboard 3 ' 
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DomesticConsumptionCoffeeDashboard&#47;Dashboard3&#47;1_rss.png' 
+                    style='border: none' />
+            </a>
+        </noscript>
+        <object class='tableauViz'  style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+            <param name='embed_code_version' value='3' /> 
+            <param name='site_root' value='' />
+            <param name='name' value='DomesticConsumptionCoffeeDashboard&#47;Dashboard3' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DomesticConsumptionCoffeeDashboard&#47;Dashboard3&#47;1.png' /> 
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+        </object>
+    </div>
+</div> 
+</div>               
 <script type='text/javascript'>                    
     var divElement = document.getElementById('viz1712560787652');                    
     var vizElement = divElement.getElementsByTagName('object')[0];                    
@@ -62,4 +67,5 @@
         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
         vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 </script>
+
 </html>
