Updated most files with gifs, divs, etc

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             img, h3 {
                 display: block;
                 /* vertical-align: middle; Align elements vertically */
-                margin-right: 10px; /* Add some spacing between elements */
+                /* margin-right: 10px; Add some spacing between elements */
             }
         </style>
         
