--- a/demo.html
+++ b/demo.html
@@ -39,11 +39,11 @@
             img, h3 {
                 display: block;
                 /* vertical-align: middle; Align elements vertically */
-                margin-right: 10px; /* Add some spacing between elements */
+                /* margin-right: 10px; Add some spacing between elements */
             }
         </style>
         
     </div>  
-    <!-- <p>Hover over the dots to see info on each country.</p> -->
+    <p>Global Coffee: Datasci 209 Spring 2024</p> </body>
 </body>
 </html>
