--- a/team.html
+++ b/team.html
@@ -27,7 +27,6 @@
     <h1>Team</h1>
     <div class="text-container">
         
-
         <!-- Keeps the black font for the links -->
         <style>
             a {
@@ -40,40 +39,41 @@
             img, h3 {
                 display: block;
                 /* vertical-align: middle; Align elements vertically */
-                margin-right: 10px; /* Add some spacing between elements */
+                /* margin-right: 10px; Add some spacing between elements */
+                /* margin: 0%; */
             }
         </style>
+        <!-- Alyssa -->
         <div class="image-container">
-            <!-- Alyssa -->
-            <img src="https://ca.slack-edge.com/T0WA5NWKG-U048CA2K9S5-6eb676be6f7f-512" 
-                 alt="Alyssa Nicholas" 
-                 class="small-image">
-            <h3>
-                <a href="https://www.ischool.berkeley.edu/people/alyssa-nicholas">Alyssa Nicholas</a>
-            </h3> 
+            <a href="https://www.ischool.berkeley.edu/people/alyssa-nicholas">
+                <img src="https://ca.slack-edge.com/T0WA5NWKG-U048CA2K9S5-6eb676be6f7f-512" 
+                     alt="Alyssa Nicholas" 
+                     class="small-image">
+            </a>
+            <h3>Alyssa Nicholas</h3> 
             <p>MIDS 2024</p>
         </div>
+        <!-- Nora -->
         <div class="image-container">
-            <!-- Nora -->
-            <img src="https://ca.slack-edge.com/T0WA5NWKG-U050JLD9W84-3d0e3d1ea702-512" 
-                 alt="Nora Povejsil" 
-                 class="small-image">
-            <h3>
-                <a href="https://www.ischool.berkeley.edu/people/nora-povejsil">Nora Povejsil</a>
-            </h3>
+            <a href="https://www.ischool.berkeley.edu/people/nora-povejsil">
+                <img src="https://ca.slack-edge.com/T0WA5NWKG-U050JLD9W84-3d0e3d1ea702-512" 
+                     alt="Nora Povejsil" 
+                     class="small-image">
+            </a>
+            <h3>Nora Povejsil</h3>
             <p>MIDS 2024</p>
         </div>
+        <!-- Daniel -->
         <div class="image-container">
-            <!-- Daniel -->
-            <img src="https://ca.slack-edge.com/T0WA5NWKG-U05AHBG9PFC-909ef7622297-512" 
-                 alt="'Daniel Bostwick" 
-                 class="small-image">
-            <h3>
-                <a href="https://www.ischool.berkeley.edu/people/daniel-bostwick">Daniel Bostwick</a>
-            </h3>
+            <a href="https://www.ischool.berkeley.edu/people/daniel-bostwick">
+                <img src="https://ca.slack-edge.com/T0WA5NWKG-U05AHBG9PFC-909ef7622297-512" 
+                     alt="'Daniel Bostwick" 
+                     class="small-image">
+            </a>
+            <h3> Daniel Bostwick</h3>
             <p>MIDS 2024</p>
         </div>
     </div>  
-    <!-- <p>Hover over the dots to see info on each country.</p> -->
-</body>
+    <br><br><br>
+    <p>Global Coffee: Datasci 209 Spring 2024</p> </body>
 </html>
