--- a/alyssasVisualizations/harvestedBags.html
+++ b/alyssasVisualizations/harvestedBags.html
@@ -18,33 +18,35 @@
         </div>
     </div>
     <h1>Harvested Bags of Coffee</h1>
-  </body>
-  <div class='tableauPlaceholder' 
-    id='viz1712467679206' 
-    style='position: relative'>
-    <noscript>
-        <a href='#'>
-            <img alt='harvest year dash ' 
-                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Coffee_Aroma_Harvest&#47;harvestyeardash&#47;1_rss.png' 
-                style='border: none' />
-        </a>
-    </noscript>
-    <object class='tableauViz'  style='display:none;'>
-        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-        <param name='embed_code_version' value='3' /> 
-        <param name='site_root' value='' />
-        <param name='name' value='Coffee_Aroma_Harvest&#47;harvestyeardash' />
-        <param name='tabs' value='no' /><param name='toolbar' value='yes' />
-        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Coffee_Aroma_Harvest&#47;harvestyeardash&#47;1.png' /> 
-        <param name='animate_transition' value='yes' />
-        <param name='display_static_image' value='yes' />
-        <param name='display_spinner' value='yes' />
-        <param name='display_overlay' value='yes' />
-        <param name='display_count' value='yes' />
-        <param name='language' value='en-US' />
-        <param name='filter' value='publish=yes' />
-    </object>
-</div>                
+</body>
+<div class="centered">
+<div class="image-container">
+    <div class='tableauPlaceholder' id='viz1712467679206' style='position: relative'>
+        <noscript>
+            <a href='#'>
+                <img alt='harvest year dash ' 
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Coffee_Aroma_Harvest&#47;harvestyeardash&#47;1_rss.png' 
+                    style='border: none' />
+            </a>
+        </noscript>
+        <object class='tableauViz'  style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+            <param name='embed_code_version' value='3' /> 
+            <param name='site_root' value='' />
+            <param name='name' value='Coffee_Aroma_Harvest&#47;harvestyeardash' />
+            <param name='tabs' value='no' /><param name='toolbar' value='yes' />
+            <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Coffee_Aroma_Harvest&#47;harvestyeardash&#47;1.png' /> 
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+            <param name='filter' value='publish=yes' />
+        </object>
+    </div>        
+</div>
+</div>        
 <script type='text/javascript'>                    
     var divElement = document.getElementById('viz1712467679206');                    
     var vizElement = divElement.getElementsByTagName('object')[0];                    
@@ -64,4 +66,18 @@
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
     vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 </script>
+<br>
+<marquee>Hello, World!</marquee>
+<body>
+  <style>
+      p {
+          justify-content:left;
+          align-items: center;
+          padding: 0 250px; 
+          max-width: 5000px; 
+          font-size: 15px;
+      }
+      </style>
+    <p>Global Coffee: Datasci 209 Spring 2024</p> 
+</body>
 </html>
