--- a/alyssasVisualizations/taste.html
+++ b/alyssasVisualizations/taste.html
@@ -22,11 +22,10 @@
         </div>
     </div>
     <h1>Coffee Likeability Metrics</h1>
-  </body>
-  <div class='tableauContainer'>
-    <div class='tableauPlaceholder' 
-        id='viz1712468084587' 
-        style='position: relative'>
+</body>
+<div class="centered">
+<div class="image-container">
+    <div class='tableauPlaceholder' id='viz1712468084587' style='position: relative'>
         <noscript>
             <a href='#'>
                 <img alt='aroma,balance,body dash ' 
@@ -51,7 +50,8 @@
             <param name='filter' value='publish=yes' />
         </object>
     </div>     
-</div>           
+</div>  
+</div>         
 <script type='text/javascript'>                    
     var divElement = document.getElementById('viz1712468084587');                    
     var vizElement = divElement.getElementsByTagName('object')[0];                    
@@ -71,4 +71,17 @@
     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
     vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 </script>
+<br>
+<body>
+  <style>
+      p {
+          justify-content:left;
+          align-items: center;
+          padding: 0 250px; 
+          max-width: 5000px; 
+          font-size: 15px;
+      }
+      </style>
+    <p>Global Coffee: Datasci 209 Spring 2024</p> 
+</body>
 </html>
