--- a/index.html
+++ b/index.html
@@ -24,22 +24,70 @@
     </div>
 </div>
 <body>
-    <!-- Container for the chart -->
-    <div id="chart-container"></div>
-    <div id="json-data"></div>
-    <script>
-        // Fetch JSON data asynchronously
-        fetch('Visualization/africa.vl.json')
-            .then(response => response.json())
-            .then(data => {
-                // Process the JSON data
-                var jsonData = JSON.stringify(data, null, 2);
-                
-                // Display the JSON data in a <pre> element
-                document.getElementById('json-data').innerHTML = `<pre>${jsonData}</pre>`;
-                vegaEmbed('#chart-container', data);
-            })
-            .catch(error => console.error('Error loading JSON:', error));
-    </script>
+    <p>For best viewing, use Safari on Full Screen</p>
+
+    <br>
+    <h1>Welcome to the Global Coffee analysis!</h1>
+    <br>
+    <h2>We have three dashboards to choose from:</h2>
+    <style>
+        a {
+            color: black; 
+            text-decoration: none; 
+        }
+    </style>
+    <style>
+        /* Style to display images and names inline */
+        img, h3 {
+            display: block;
+            /* vertical-align: middle; Align elements vertically */
+            /* margin-right: 10px; Add some spacing between elements */
+            /* margin: 0%; */
+        }
+    </style>
+    <br>
+    <div class="text-container">
+        <div class="front-text-container">
+            <h2>Likeability</h2>
+            <h4>Likeability and Harvest of Coffee</h4>
+        </div>
+        <div class="front-text-container">
+            <h2>Business</h2>
+            <h4>Overview of Global Coffee Business</h4>
+        </div>
+        <div class="front-text-container">
+            <h2>Culture</h2>
+            <h4>Countries that Produce and Consume</h4>
+        </div>
+    </div>
+</body>
+<body>
+    <style>
+        .gif-container {
+            position: relative; /* Set the container to relative positioning */
+            width: 50%; /* Set the width of the container */
+            height: 50%; /* Set the height of the container */
+        }
+        .beans-gif {
+            position: absolute; /* Set the GIF to absolute positioning */
+            top: 30%; /* Position the top of the GIF at 50% of the container height */
+            left: 100%; /* Position the left of the GIF at 50% of the container width */
+            transform: translate(-50%, -50%); /* Move the GIF back by half of its own width and height */
+        }
+    </style>
+    <div class="gif-container">
+        <!-- GIF from https://nationalcoffee.blog/2016/09/29/the-best-coffee-gifs/ -->
+        <img src="art-of-coffee.gif" alt="Example GIF" class="beans-gif">
+    </div>
+    <style>
+        p {
+            justify-content:left;
+            align-items: center;
+            padding: 0 250px; 
+            max-width: 5000px; 
+            font-size: 15px;
+        }
+      </style>
+    <p>Global Coffee: Datasci 209 Spring 2024</p> 
 </body>
 </html>
