--- a/nora.html
+++ b/nora.html
@@ -8,27 +8,59 @@
 </head>
 <body>
     <div class="topnav">
-      <div class="links-container">
-        <h1><a href="index.html">Global Coffee</a></h1>
-      </div>
-      <div class="links-container">
-        <h3><a href="nora.html">Main</a></h3> 
-        <h3><a href="norasVisualizations/consumption.html">Consumption</a></h3>
-        <h3><a href="norasVisualizations/production.html">Production</a></h3>  
-        <h3><a href="norasVisualizations/import-export.html">Import and Export</a></h3>
-      </div>
+        <div class="links-container">
+          <h1><a href="index.html">Global Coffee</a></h1>
+        </div>
+        <div class="links-container">
+          <h3><a href="nora.html">Main</a></h3> 
+          <h3><a href="norasVisualizations/consumption.html">Consumption</a></h3>
+          <h3><a href="norasVisualizations/production.html">Production</a></h3>  
+          <h3><a href="norasVisualizations/import-export.html">Import and Export</a></h3>
+        </div>
     </div>
     <h1>An Overview of the Coffee Business</h1>
-  </body>
-  <body>
+</body>
+<body>
+  <style>
+      p {
+          max-width: 800px; /* Adjust the value as needed */
+          font-size: 20px;
+      }
+    </style>
+  <p>
+      Describe your overall theme of your visualizations here.
+  </p>
+</body>
+<br>
+<body>
     <style>
-        p {
-            max-width: 800px; /* Adjust the value as needed */
-            font-size: 20px;
+        .gif-container {
+            position: relative; /* Set the container to relative positioning */
+            width: 50%; /* Set the width of the container */
+            height: 50%; /* Set the height of the container */
         }
-        </style>
-    <p>
-        Describe your overall theme of your visualizations here.
-    </p>
+        .beans-gif {
+            position: absolute; /* Set the GIF to absolute positioning */
+            top: 30%; /* Position the top of the GIF at 50% of the container height */
+            left: 100%; /* Position the left of the GIF at 50% of the container width */
+            transform: translate(-50%, -50%); /* Move the GIF back by half of its own width and height */
+        }
+        
+    </style>
+    <h3></h3>
+    <div class="gif-container">
+        <!-- GIF from https://images.dawn.com/news/1188207 -->
+        <img src="exports.gif" alt="Example GIF" class="beans-gif">
+    </div>
+    <style>
+      p {
+          justify-content:left;
+          align-items: center;
+          padding: 0 250px; 
+          max-width: 5000px; 
+          font-size: 15px;
+      }
+    </style>
+    <p>Global Coffee: Datasci 209 Spring 2024</p> 
 </body>
 </html>
