--- a/norasVisualizations/import-export.html
+++ b/norasVisualizations/import-export.html
@@ -67,4 +67,6 @@
         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
         vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 </script>
+<br><br>
+<p>Global Coffee: Datasci 209 Spring 2024</p>
 </html>
