Updated all main htmls

--- a/index.html
+++ b/index.html
@@ -25,40 +25,81 @@
 </div>
 <body>
     <p>For best viewing, use Safari on Full Screen</p>
-
     <br>
     <h1>Welcome to the Global Coffee analysis!</h1>
     <br>
     <h2>We have three dashboards to choose from:</h2>
+    <br><br><br><br>
+</body>
+<body>
     <style>
+        .front-text-container1 {
+            text-align: center; /* Center the contents horizontally */
+            justify-content: space-between;
+            width: 50vh;
+            /* max-width: 800px; Adjust the maximum width as needed */
+            height: 20vh;
+            border: 2px solid brown; /* Add a border with brown color */
+            background-color: #f5deb3; /* Set the background color to a light brown */
+            padding: 5vh; /* Add padding inside the box */
+            box-sizing: border-box; /* Include padding and border in the element's total width */
+            margin: 1% auto 1%;
+            cursor: pointer; /* Change cursor to pointer on hover */
+            color: black;
+        }
+        .front-text-container1:hover {
+            background-color: lightgray; /* Change background color on hover */
+            text-decoration: none;
+            color: black;
+        }
+        .text-container1 {
+        display: flex;
+        flex-direction: row;
+        padding: 0 5%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin: 0% auto;
+        margin-bottom: 10px;
+        }
+        h2 {
+        display: inline; /* Make the text an inline-block element */
+        vertical-align: center; /* Align elements vertically */
+        /* margin-right: 10px; Add some spacing between elements */
+        margin-right: 5%;
+        margin: 0%;
+        margin-bottom: 20%;
+        }
+        h4 {
+        display: inline-block; /* Make the text an inline-block element */
+        vertical-align: center; /* Align elements vertically */
+        margin-right: 0%; /* Add some spacing between elements */
+        margin: 0;
+        }
         a {
-            color: black; 
-            text-decoration: none; 
+        text-decoration: none; /* Remove underline from the link */
+        text-transform: none;
         }
     </style>
-    <style>
-        /* Style to display images and names inline */
-        img, h3 {
-            display: block;
-            /* vertical-align: middle; Align elements vertically */
-            /* margin-right: 10px; Add some spacing between elements */
-            /* margin: 0%; */
-        }
-    </style>
-    <br>
-    <div class="text-container">
-        <div class="front-text-container">
-            <h2>Likeability</h2>
-            <h4>Likeability and Harvest of Coffee</h4>
-        </div>
-        <div class="front-text-container">
-            <h2>Business</h2>
-            <h4>Overview of Global Coffee Business</h4>
-        </div>
-        <div class="front-text-container">
-            <h2>Culture</h2>
-            <h4>Countries that Produce and Consume</h4>
-        </div>
+    <div class="text-container1">
+        <a href="alyssa.html">
+            <div class="front-text-container1">
+                <h2>Likeability</h2>
+                <h4>Likeability and Harvest of Coffee</h4>
+            </div>
+        </a>
+        <a href="nora.html">
+            <div class="front-text-container1">
+                <h2>Business</h2>
+                <h4>Overview of Global Coffee Business</h4>
+            </div>
+        </a>
+        <a href="daniel.html">
+            <div class="front-text-container1">
+                <h2>Culture</h2>
+                <h4>Countries that Produce and Consume</h4>
+            </div>
+        </a>
     </div>
 </body>
 <body>
