--- a/alyssa.html
+++ b/alyssa.html
@@ -13,28 +13,100 @@
 <body>
     <div class="topnav">
         <div class="links-container">
-            <h1><a href="index.html">Global Coffee</a></h1>
+          <h1><a href="index.html">Global Coffee</a></h1>
         </div>
         <div class="links-container">
-            <h3><a href="alyssa.html">Main</a></h3> 
-            <h3><a href="alyssasVisualizations/harvestedBags.html">Harvested Bags</a></h3> 
-            <h3><a href="alyssasVisualizations/taste.html">Taste</a></h3> 
+          <h3><a href="alyssa.html">Likeability</a></h3> 
+          <h3><a href="nora.html">Business</a></h3> 
+          <h3><a href="daniel.html">Culture</a></h3> 
+          <h3><a href="about.html">About</a></h3>
+          <h3><a href="team.html">Team</a></h3> 
+          <h3><a href="demo.html">Demo</a></h3>
         </div>
     </div>
+    <br>
     <h1>The Likeability and Harvest of Coffee Throughout the World</h1>
-    <body>
-        <style>
-            p {
-                max-width: 800px; /* Adjust the value as needed */
-                font-size: 20px;
-            }
-            </style>
-        <p>
-            Describe your overall theme of your visualizations here.
-        </p>
-    </body>
 </body>
 <br>
+<body>
+    <style>
+        .front-text-container1 {
+            text-align: center; /* Center the contents horizontally */
+            justify-content: space-between;
+            width: 50vh;
+            /* max-width: 800px; Adjust the maximum width as needed */
+            height: 50vh;
+            border: 2px solid brown; /* Add a border with brown color */
+            background-color: #f5deb3; /* Set the background color to a light brown */
+            padding: 5vh; /* Add padding inside the box */
+            box-sizing: border-box; /* Include padding and border in the element's total width */
+            margin: 1% auto 1%;
+            cursor: pointer; /* Change cursor to pointer on hover */
+            color: black;
+        }
+        .front-text-container1:hover {
+            background-color: lightgray; /* Change background color on hover */
+            text-decoration: none;
+            color: black;
+        }
+        .text-container1 {
+        display: flex;
+        flex-direction: row;
+        padding: 0 20%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin: 0% auto;
+        margin-bottom: 10px;
+        }
+        h2 {
+        display: inline; /* Make the text an inline-block element */
+        vertical-align: center; /* Align elements vertically */
+        /* margin-right: 10px; Add some spacing between elements */
+        margin-right: 5%;
+        margin: 0%;
+        margin-bottom: 20%;
+        }
+        h4 {
+        display: inline-block; /* Make the text an inline-block element */
+        vertical-align: center; /* Align elements vertically */
+        margin-right: 0%; /* Add some spacing between elements */
+        margin: 0;
+        }
+        a {
+        text-decoration: none; /* Remove underline from the link */
+        text-transform: none;
+        }
+    </style>
+    <div class="text-container1">
+        <a href="alyssasVisualizations/harvestedBags.html">
+            <div class="front-text-container1">
+                <h2>Taste Profile</h2>
+                <h4>Explore the intricate flavors of coffee from around the world with our Taste Profile Dashboard. 
+                    This dashboard provides insights into coffee flavor profiles sourced from the ICO Dataset. 
+                    The ICO Dataset offers scores for each bag of coffee across categories like Aroma, Balance, 
+                    Body, Flavor, and Sweetness, rated on a scale from 0 to 10. Use the user-friendly sliders or input 
+                    specific ranges to filter the data and observe the number of bags falling within your selected parameters. 
+                    Discover the origins of these coffees and gain new insights into average scores per country as you 
+                    hover over each location.
+                </h4>
+            </div>
+        </a>
+        <a href="alyssasVisualizations/taste.html">
+            <div class="front-text-container1">
+                <h2>Harvested Bags per Year</h2>
+                <h4>Delve into the dynamics of coffee production over time with our Harvested Bags per Year Dashboard. 
+                    Utilizing data from the ICO Coffee Dataset, this dashboard allows you to explore harvest yields across 
+                    different years. Simply double-tap on a year to input a specific harvest year, or toggle between years 
+                    using the provided arrows. Hover over any country to see the recorded number of bags harvested in that year, 
+                    providing valuable insights into the dataset's coverage and the global coffee industry's dynamics. 
+                    Please note that while these numbers represent a portion of total coffee production, they offer significant 
+                    insights into production trends.
+                </h4>
+            </div>
+        </a>    
+    </div>
+</body>
 <body>
     <style>
         .gif-container {
