--- a/nora.html
+++ b/nora.html
@@ -12,24 +12,98 @@
           <h1><a href="index.html">Global Coffee</a></h1>
         </div>
         <div class="links-container">
-          <h3><a href="nora.html">Main</a></h3> 
-          <h3><a href="norasVisualizations/consumption.html">Consumption</a></h3>
-          <h3><a href="norasVisualizations/production.html">Production</a></h3>  
-          <h3><a href="norasVisualizations/import-export.html">Import and Export</a></h3>
+          <h3><a href="alyssa.html">Likeability</a></h3> 
+          <h3><a href="nora.html">Business</a></h3> 
+          <h3><a href="daniel.html">Culture</a></h3> 
+          <h3><a href="about.html">About</a></h3>
+          <h3><a href="team.html">Team</a></h3> 
+          <h3><a href="demo.html">Demo</a></h3>
         </div>
     </div>
+    <br>
     <h1>An Overview of the Coffee Business</h1>
 </body>
+<br>
 <body>
-  <style>
-      p {
-          max-width: 800px; /* Adjust the value as needed */
-          font-size: 20px;
-      }
+    <style>
+        .front-text-container1 {
+            text-align: center; /* Center the contents horizontally */
+            justify-content: space-between;
+            width: 50vh;
+            /* max-width: 800px; Adjust the maximum width as needed */
+            height: 40vh;
+            border: 2px solid brown; /* Add a border with brown color */
+            background-color: #f5deb3; /* Set the background color to a light brown */
+            padding: 5vh; /* Add padding inside the box */
+            box-sizing: border-box; /* Include padding and border in the element's total width */
+            margin: 1% auto 1%;
+            cursor: pointer; /* Change cursor to pointer on hover */
+            color: black;
+        }
+        .front-text-container1:hover {
+            background-color: lightgray; /* Change background color on hover */
+            text-decoration: none;
+            color: black;
+        }
+        .text-container1 {
+        display: flex;
+        flex-direction: row;
+        padding: 0 5%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin: 0% auto;
+        margin-bottom: 10px;
+        }
+        h2 {
+        display: inline; /* Make the text an inline-block element */
+        vertical-align: center; /* Align elements vertically */
+        /* margin-right: 10px; Add some spacing between elements */
+        margin-right: 5%;
+        margin: 0%;
+        margin-bottom: 20%;
+        }
+        h4 {
+        display: inline-block; /* Make the text an inline-block element */
+        vertical-align: center; /* Align elements vertically */
+        margin-right: 0%; /* Add some spacing between elements */
+        margin: 0;
+        }
+        a {
+        text-decoration: none; /* Remove underline from the link */
+        text-transform: none;
+        }
     </style>
-  <p>
-      Describe your overall theme of your visualizations here.
-  </p>
+    <div class="text-container1">
+        <a href="norasVisualizations/consumption.html">
+            <div class="front-text-container1">
+                <h2>Production</h2>
+                <h4>Explore countries’ total coffee production measured in millions of KG of coffee produced per year. 
+                    Countries are ordered by their geographical area and colored by their total production amount. 
+                    Hover for more information about each country and coffee production stats.
+                </h4>   
+            </div>
+        </a>
+        <a href="norasVisualizations/production.html">
+            <div class="front-text-container1">
+                <h2>Consumption</h2>
+                <h4>Explore top-producing countries’ domestic consumption stats measured in KG per capita per year. 
+                    Hover over the squares to see total production and other stats. 
+                    To see how these countries are distributed on the global map, scroll down to the second visualization.
+                </h4>
+            </div>
+        </a>
+        <a href="norasVisualizations/import-export.html">
+            <div class="front-text-container1">
+                <h2>Export and Import</h2>
+                <h4>This viz shows the geographical distributions of top-exporting, top-importing, and top-re-exporting countries. 
+                    The size and color of bubbles represents the quantity of these measures, in units of millions of KG of coffee. 
+                    Exports refer to the amount of coffee exported from a country, imports refer to the amount of coffee imported 
+                    into a country, and re-exports refer to the amount of coffee re-exported after being imported into a country. 
+                </h4>
+            </div>
+        </a>
+    </div>
 </body>
 <br>
 <body>
