Centralizing everything in index.html

--- a/about.html
+++ b/about.html
@@ -80,6 +80,7 @@
     </style>
 
 </body>
+<body>
     <div class="text-container1">
         <div class="front-text-container1">
             <h2>Objective</h2>
@@ -93,7 +94,7 @@
             </h4>   
         </div>
         
-        <a href="danielsVisualizations/africa.html">
+        <a href="https://www.kaggle.com/datasets/yamaerenay/ico-coffee-dataset-worldwide?select=prices-paid-to-growers.csv">
             <div class="front-text-container1">
                 <h2>Arabica / Robusta Data</h2>
                 <h4>The ICO Dataset, or International Coffee Organization Dataset, is a comprehensive compilation of 
