Updated CSS files

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <br><br><br><br>
-    <p>For best viewing, use Safari on Full Screen</p>
+    <p>For best viewing, use Google Chrome on Full Screen</p>
     <br>
     <h1>Welcome to the Global Coffee analysis!</h1>
     <!-- <br> -->
@@ -3441,7 +3441,7 @@
                         the overall production and consumption of each country. Hover over the bars to see how much 
                         each country is producing and consuming in total. To view other years, toggle the years below.
                     </h4>
-                    <div id="chart-container"></div>
+                    <div id="chart-container1"></div>
                     <!-- Load and embed Altair chart -->
                     <script>
                         // Embed Altair chart JSON
@@ -15197,7 +15197,7 @@
   }
 }
                            // Embed Altair chart into the specified container
-                        vegaEmbed('#chart-container', chartAfrica);
+                        vegaEmbed('#chart-container1', chartAfrica);
                     </script>
                     <!--    VIZ GOES HERE   -->
                 </div>
@@ -15214,7 +15214,7 @@
                         the overall production and consumption of each country. Hover over the bars to see how much 
                         each country is producing and consuming in total. To view other years, toggle the years below.
                      </h4>
-                     <div id="chart-container"></div>
+                     <div id="chart-container2"></div>
                     <!-- Load and embed Altair chart -->
                     <script>
                         // Embed Altair chart JSON
@@ -19807,7 +19807,7 @@
   }
 }
                            // Embed Altair chart into the specified container
-                        vegaEmbed('#chart-container', chartAsia);
+                        vegaEmbed('#chart-container2', chartAsia);
                     </script>
                     <!--    VIZ GOES HERE   -->
                 </div>
@@ -19824,7 +19824,7 @@
                         the overall production and consumption of each country. Hover over the bars to see how much 
                         each country is producing and consuming in total. To view other years, toggle the years below.
                     </h4>
-                    <div id="chart-container"></div>
+                    <div id="chart-container3"></div>
                     <!-- Load and embed Altair chart -->
                     <script>
                         // Embed Altair chart JSON
@@ -26070,7 +26070,7 @@
   }
 }
                            // Embed Altair chart into the specified container
-                        vegaEmbed('#chart-container', chartNoAm);
+                        vegaEmbed('#chart-container3', chartNoAm);
                     </script>
                     <!--    VIZ GOES HERE   -->
                 </div>
@@ -26087,7 +26087,7 @@
                         the overall production and consumption of each country. Hover over the bars to see how much 
                         each country is producing and consuming in total. To view other years, toggle the years below.
                     </h4>
-                    <div id="chart-container"></div>
+                    <div id="chart-container4"></div>
                     <!-- Load and embed Altair chart -->
                     <script>
                         // Embed Altair chart JSON
@@ -29578,7 +29578,7 @@
   }
 }
                            // Embed Altair chart into the specified container
-                        vegaEmbed('#chart-container', chartSoAm);
+                        vegaEmbed('#chart-container4', chartSoAm);
                     </script>
                     <!--    VIZ GOES HERE   -->
                 </div>
