Updated CSS and index.html

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
                     </h4>
                 </div>
             </a>
+            <a href="https://www.kaggle.com/datasets/volpatto/coffee-quality-database-from-cqi/data">
+                <div class="front-text-container">
+                    <h2>Coffee Quality Dataset</h2>
+                    <h4>The Coffee Quality database from the Coffee Quality Institute (CQI) provides in-depth reviews of 
+                        Arabica and Robusta coffees, covering aroma, flavor, acidity, and more. The dataset also comes with 
+                        metadata on processing methods and origins, such as, country of origin, region, altitude, and farm name. 
+                        This datasource is sourced directly from the Coffee Quality Institute.
+                    </h4>
+                </div>
+            </a>
         </div>
     </section>
 </body>
