Added Demo Video

--- a/index.html
+++ b/index.html
@@ -29648,18 +29648,23 @@
     </section>
 </body>
 <body>
+  <script src="script.js"></script>
+</body>
+<body>
     <section id="demo"></section>
     <br><br><br>
     <h1 class="larger-text">Demo</h1>
-    <!--    DEMO GOES HERE  -->
-</body>
+    <iframe width="600" height="400" 
+            src="https://www.youtube.com/embed/77C-hDcDj18?si=AFn-ZvcJVkDP7zWG" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen>
+    </iframe>
+  </body>
 <body>
-    <script src="script.js"></script>
-</body>
-<!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
-
-<body>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><!--<br><br><br><br><br><br><br><br><br>-->
     <p>Global Coffee: Datasci 209 Spring 2024</p> 
 </body>
 </html>
